test/failing/badlist4.trunnel

struct x {
  u16 a IN [ 30000000..3000000001 ];
}

